Bug 42913 - r600g: glx-swap-pixmap causes screen corruption
Summary: r600g: glx-swap-pixmap causes screen corruption
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 45856 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-14 03:59 UTC by Kai
Modified: 2012-02-10 00:27 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Kai 2011-11-14 03:59:37 UTC
First: I don't think this is bug 40610 because I don't see a crash but screen corruption and (sometimes) the following lines in dmesg:
> radeon 0000:01:00.0: r600_check_texture_resource:1346 texture invalid format 0
> [drm:radeon_cs_ioctl] *ERROR* Invalid command stream !

But I'm no Mesa/Piglit expert, so my assumption might be wrong.

The Piglit test itself fails, the output is:
> Probe at (0,0)
>  Expected: 0.000000 1.000000 0.000000 0.000000
>  Observed: 0.000000 0.000000 1.000000 1.000000

Used stack:
Mesa: Git/9ae10e9c
libdrm: 2.4.27-1
Kernel: 3.1.1
X.org: 1.11.1.902-1

Let me know, if you need more information.
Comment 1 Kai 2011-11-15 08:38:49 UTC
Todays run showed one difference in what was reported by Piglit:
> Probe at (0,0)
>   Expected: 0.000000 1.000000 0.000000 0.000000
>   Observed: 0.000000 0.000000 0.000000 1.000000
> PIGLIT: {'result': 'fail' }
apart from that, the screen is still corrupted (a KDM restart fixes the screen again; also non-X TTYs aren't affected either).

Used stack:
Mesa: Git/9d4d9d34
libdrm: 2.4.27-1
Kernel: 3.1.1
X.org: 1.11.1.902-1
Comment 2 Dave Airlie 2011-11-15 09:34:49 UTC
does xrandr to a new mode and back help?
Comment 3 Kai 2011-11-15 11:47:33 UTC
(In reply to comment #2)
> does xrandr to a new mode and back help?

Yes, that restores a normal screen. AFAICT there is no vestige of the corruption left.
Comment 4 Kai 2011-11-22 05:31:15 UTC
The weekend's Piglit run showed the bug with Mesa git/03df791c.

Apart from that I noticed, that this bug was assigned to dri-devel and not mesa-dev. Is that correct? This is, after all, most likely a bug in r600g and I thought Gallium driver development happened on mesa-dev.
Comment 5 Stefano Teso 2011-12-23 07:29:54 UTC
> But I'm no Mesa/Piglit expert, so my assumption might be wrong.

I have the very same issue here on evergreen, 32-bit userland on i7; debian unstable.

mesa: git 2eafd07323891944b9c012a17359cd5f07a87890 (cloned as of today)
libdrm: 2.4.29-1
kernel: 3.2-rc6
xorg: 1.11.2.902-1

(BTW, when using gnome-shell, the corruption is fixed automatically after half a second or so; using fluxbox, the screen stays corrupted.)

HTH,
Comment 6 Michel Dänzer 2011-12-28 04:26:33 UTC
Fixed in xf86-video-ati Git ae45d7e6d8e6844cd4586c9ee97c21b257fa788f ('DRI2: Can't use page flipping for pixmaps.').
Comment 7 Michel Dänzer 2012-02-10 00:27:27 UTC
*** Bug 45856 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.