DRI2: Can't use page flipping for pixmaps. (bug #42913)

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=42913 .

Signed-off-by: Michel Dänzer <michel.daenzer@amd.com>